# zzz

./: .env.development.example  .env.production.example  CLAUDE.md  Cargo.toml  README.md  about.html  actions.html  bots.html  capabilities.html  chats.html  deno.json  docs.html  feeds.html  files.html  gro.config.ts  index.html  models.html  package-lock.json  package.json  projects.html  prompts.html  providers.html  repos.html  settings.html  svelte.config.js  tabs.html  tsconfig.json  views.html  vite.config.ts
.github/ISSUE_TEMPLATE/: config.yml  preapproved.md
.github/workflows/: check.yml
.well-known/: library.json  package.json
_app/: version.json
crates/: CLAUDE.md
crates/zzz_server/: Cargo.toml
crates/zzz_server/src/: account.rs  auth.rs  bootstrap.rs  daemon_token.rs  db.rs  error.rs  filer.rs  handlers.rs  main.rs  pty_manager.rs  rpc.rs  scoped_fs.rs  ws.rs
crates/zzz_server/src/provider/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
docs/: api.html  architecture.md  development.md  library.html  providers.md
docs/api/: ActionContextmenu.svelte.html  ActionDetail.svelte.html  ActionList.svelte.html  ActionListitem.svelte.html  CapabilitiesView.svelte.html  CapabilityBackend.svelte.html  CapabilityFilesystem.svelte.html  CapabilityProvider.svelte.html  CapabilityProviderApi.svelte.html  CapabilityProviderOllama.svelte.html  CapabilitySystem.svelte.html  CapabilityWebsocket.svelte.html  ChatContextmenu.svelte.html  ChatInitializer.svelte.html  ChatList.svelte.html  ChatListitem.svelte.html  ChatThread.svelte.html  ChatThreadAddByModel.svelte.html  ChatThreadManageByTag.svelte.html  ChatView.svelte.html  ChatViewMulti.svelte.html  ChatViewSimple.svelte.html  ChatsContextmenu.svelte.html  ClearRestoreButton.svelte.html  ConfirmButton.svelte.html  ContentEditor.svelte.html  ContentPreview.svelte.html  ContentStats.svelte.html  ContextmenuEntryCopyToClipboard.svelte.html  ContextmenuEntryToggle.svelte.html  Dashboard.svelte.html  DashboardActions.svelte.html  DashboardCapabilities.svelte.html  DashboardChats.svelte.html  DashboardDiskfiles.svelte.html  DashboardHeader.svelte.html  DashboardHome.svelte.html  DashboardModels.svelte.html  DashboardPrompts.svelte.html  DashboardProviders.svelte.html  (+193 more)
providers/: ollama.html
scripts/: dev.ts  dev_setup.ts  prod_setup.ts  setup_helpers.ts
src/lib/: ActionDetail.svelte  ActionListitem.svelte  CapabilitiesView.svelte  CapabilityBackend.svelte  CapabilityFilesystem.svelte  CapabilityProviderApi.svelte  CapabilityProviderOllama.svelte  CapabilityWebsocket.svelte  ChatContextmenu.svelte  ChatInitializer.svelte  ChatThread.svelte  ChatThreadManageByTag.svelte  ChatView.svelte  ChatViewMulti.svelte  ChatViewSimple.svelte  ClearRestoreButton.svelte  ConfirmButton.svelte  ContentEditor.svelte  ContentPreview.svelte  ContextmenuEntryToggle.svelte  Dashboard.svelte  DashboardActions.svelte  DashboardCapabilities.svelte  DashboardChats.svelte  DashboardDiskfiles.svelte  DashboardHome.svelte  DashboardModels.svelte  DashboardPrompts.svelte  DashboardProviders.svelte  DashboardSettings.svelte  DeskMenu.svelte  DiskfileActions.svelte  DiskfileEditorNav.svelte  DiskfileEditorView.svelte  DiskfileExplorer.svelte  DiskfileHistoryView.svelte  DiskfileInfo.svelte  DiskfileListitem.svelte  DiskfilePartView.svelte  DiskfilePicker.svelte  (+154 more)
src/routes/: +layout.svelte  fuz.css  library.json  style.css
src/test/: action_event.test.ts  cell.svelte.base.test.ts  xml.test.ts  (+30 more)
(+1154 files in other folders)
