[workspace]
resolver = "2"
members = ["crates/zzz_server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
publish = false

[workspace.dependencies]
fuz_common = { path = "../private_fuz/crates/fuz_common" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
deadpool-postgres = "0.14"
hmac = "0.12"
sha2 = "0.10"
blake3 = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5"
rand = "0.8"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
significant_drop_tightening = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unwrap_used = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
