[package]
name = "zzz_server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "zzz_server"
path = "src/main.rs"

[dependencies]
fuz_common.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
