[package]
name = "zzz_server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "zzz_server"
path = "src/main.rs"

[dependencies]
fuz_common.workspace = true
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util.workspace = true
tokio-util.workspace = true
tokio-postgres.workspace = true
deadpool-postgres.workspace = true
hmac.workspace = true
sha2.workspace = true
blake3.workspace = true
base64.workspace = true
uuid.workspace = true
argon2.workspace = true
rand.workspace = true
notify.workspace = true
fuz_pty.workspace = true
reqwest.workspace = true
libc = "0.2"

[lints]
workspace = true
